2 bugfixes
if snake had collided with a wall, the next time this wall would have
been passable;
food objects were not destroyed completely, remaining invisible, but
edible

--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
 
 	background-color: #000000;
 }
-.body {
-	
+.body {	
 	border-radius: 2vmin;
 	background-color: #1F7872;
 }
@@ -38,5 +37,5 @@ body {
 
 	border-radius: 1vmin;
 
-	background-color: #BADA55;
+	background-color: #990033;
 }
